# NixCore

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libnixconsensus.pc.in  nix-sigma.files  nix-sigma.includes
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.cpp  addressindex.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  core_io.h  core_read.cpp  core_write.cpp  dbwrapper.h  hash.h  httpserver.cpp  init.cpp  key.cpp  key.h  keystore.cpp  keystore.h  miner.cpp  miner.h  (+45 more)
src/bench/: verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: airdropaddresses.h  consensus.h  merkle.cpp  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: common.h
src/ghost-address/: commitmentkey.cpp  commitmentkey.h  extkey.cpp  extkey.h  keystore.cpp  keyutil.cpp  lz4.h  mnemonic.cpp  stealth.cpp  stealth.h
src/ghost-address/smsg/: crypter.cpp  crypter.h  db.cpp  db.h  keystore.cpp  keystore.h  rpcsmessage.cpp  rpcsmessage.h  smessage.cpp  smessage.h
src/ghostnode/: activeghostnode.cpp  activeghostnode.h  darksend-relay.cpp  darksend-relay.h  darksend.cpp  darksend.h  flat-database.h  ghostnode-payments.cpp  ghostnode-payments.h  ghostnode-sync.cpp  ghostnode-sync.h  ghostnode.cpp  ghostnode.h  ghostnodeconfig.cpp  ghostnodeconfig.h  ghostnodeman.cpp  ghostnodeman.h  instantx.cpp  instantx.h  netfulfilledman.cpp  netfulfilledman.h  rpcghostnode.cpp  spork.cpp  spork.h
src/governance/: networking-governance.cpp  networking-governance.h
src/libzerocoin/: Accumulator.cpp  Accumulator.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commitment.cpp  Commitment.h  Denominations.cpp  ParallelTasks.cpp  ParallelTasks.h  ParamGeneration.cpp  Params.cpp  Params.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  SpendMetaData.cpp  SpendMetaData.h  Zerocoin.h  ZerocoinDefines.h  bignum.h  paramgen.cpp
src/masternode/: activezoinode.cpp  activezoinode.h  darksend-relay.cpp  darksend-relay.h  darksend.cpp  darksend.h  instantx.cpp  instantx.h  rpczoinode.cpp  spork.cpp  spork.h  zoinode-payments.cpp  zoinode-payments.h  zoinode-sync.cpp  zoinode-sync.h  zoinode.cpp  zoinode.h  zoinodeconfig.cpp  zoinodeconfig.h  zoinodeman.cpp  zoinodeman.h
src/policy/: feerate.cpp  fees.cpp  policy.cpp  policy.h
src/pos/: kernel.cpp  kernel.h  miner.cpp  miner.h  vaultstake.cpp  vaultstake.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  delegatedstaking.cpp  delegatedstaking.h  editaddressdialog.cpp  ghostnode.cpp  ghostnode.h  ghostnodelist.cpp  ghostnodelist.h  ghostprotocol.cpp  ghostprotocol.h  ghostvault.cpp  ghostvault.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  mnemonicdialog.cpp  networkstyle.cpp  nix.cpp  nix.qrc  nix_locale.qrc  nixaddressvalidator.cpp  nixamountfield.cpp  nixgui.cpp  nixgui.h  nixunits.cpp  notificator.h  offchaingovernance.cpp  offchaingovernance.h  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  (+32 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  debugwindow.ui  delegatedstaking.ui  ghostnode.ui  ghostnodelist.ui  ghostprotocol.ui  ghostvault.ui  helpmessagedialog.ui  mnemonicdialog.ui  modaloverlay.ui  offchaingovernance.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/res/: nix-qt-res.rc
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  mining.h  misc.cpp  mnemonic.cpp  net.cpp  rawtransaction.cpp  register.h  rpcutil.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  nixconsensus.cpp  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/sigma/: coin.cpp  coin.h  coinspend.cpp  coinspend.h  params.cpp  params.h  r1_proof.h  r1_proof_generator.h  r1_proof_generator.hpp  r1_proof_verifier.h  r1_proof_verifier.hpp  sigma_primitives.h  sigma_primitives.hpp  sigmaplus_proof.h  sigmaplus_prover.h  sigmaplus_prover.hpp  sigmaplus_verifier.h  sigmaplus_verifier.hpp  spend_metadata.cpp  spend_metadata.h
src/stealth-address/: coincontrol.h  extkey.cpp  extkey.h  keystore.cpp  keyutil.cpp  mnemonic.cpp  smessage.cpp  smessage.h  stealth.cpp  stealth.h
src/support/: lockedpool.cpp
src/test/: DoS_tests.cpp  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+21 more)
src/usbdevice/: ledgerdevice.cpp
src/wallet/: autoghoster.cpp  autoghoster.h  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  ghostwallet.cpp  ghostwallet.h  init.cpp  rpcdump.cpp  rpcwallet.cpp  sigmamint.cpp  sigmamint.h  sigmatracker.cpp  sigmatracker.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zerocoin/: sigma.cpp  sigma.h  zerocoin.cpp  zerocoin.h
src/zmq/: zmqconfig.h
(+119 files in other folders)
